--- a/civil-searcher/package.json
+++ b/civil-searcher/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.2",
     "react": "^16.3.1",
+    "react-c3": "^1.0.0",
+    "react-c3js": "^0.1.20",
+    "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.3.1",
     "react-materialize": "^2.1.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-router-scroll": "^0.4.4",
+    "react-scripts": "1.1.4",
+    "react-sticky": "^6.0.2",
+    "react-sticky-header": "^0.1.9"
   },
   "scripts": {
     "start": "react-scripts start",
