icons not working

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chart.js": "^2.7.2",
     "install": "^0.11.0",
     "material-ui": "^0.20.0",
+    "materialize-css": "^1.0.0-beta",
     "npm": "^5.8.0",
     "react": "^16.3.2",
     "react-c3": "^1.0.0",
